Lots of changes

--- a/html_junk/provider.html
+++ b/html_junk/provider.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>IncentHealth | Patient Landing Page</title>
+		<title>IncentHealth | Provider Landing Page</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic" rel="stylesheet" type="text/css">
 		<link href="stylesheet.css" rel="stylesheet">
 	</head>
@@ -15,14 +15,13 @@
 		</header>
 
 		<div class="mainbody">
-			<h2>Complete Patient Sign Up</h2><br>
+			<h2>Invite Patient to IncentHealth</h2><br>
 			Name: <input class="nameInput" type="text" name="Name"><br>
 			Email: <input class="emailInput" type="text" name="Email"><br>
 			Address: <input class="addressInput" type="text" name="Address"><br> <!--TEMPORARY FOR UPORT--> 
-			<input class="submitButton" type="submit" value="Create Account" name="Submit">
+			<input class="submitButton" type="submit" value="Send Invitation" name="Submit">
 		</div>
 		<script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
-		<script src="web3.min.js"></script>
-		<script src="script.js"></script>
+		<script src="providerscript.js"></script>
 	</body>
 </html>
